Switch some uses of Arrays.asList to List.of